# nickle

./: .gitignore  Makefile.am  cha-cha.5c  configure.ac  edit.c  float.c  lex.l  prng.5c  sort.5c
debian/: changelog
doc/tutorial/: Makefile.am
git-origin/: FETCH_HEAD  config  index  packed-refs
git-origin/logs/refs/remotes/origin/: HEAD
git-origin/objects/pack/: pack-601939c8661c50d92651506271c4d2677439c15a.idx  pack-601939c8661c50d92651506271c4d2677439c15a.pack  pack-b4297e5885910d7bf9f763185f3f6c005526d65a.idx  pack-b4297e5885910d7bf9f763185f3f6c005526d65a.pack
git-origin/refs/heads/: master
test/: Makefile.am  chacha_test.5c  sorttest.5c
